--- a/Prototype/views/voiceCall.ejs
+++ b/Prototype/views/voiceCall.ejs
@@ -17,7 +17,7 @@
         <%- include('partials/navbar') %>
     </header>
     <div class="modPageContent">
-        <h1> <%=toUser.fname%> <%=toUser.lname %></h1>
+        <h1 class="subHeader"> <%=toUser.fname%> <%=toUser.lname %></h1>
         <p id="status">Waiting for Call...</p>
         <button id="callBtn" class="voiceButton">Call</button>
         <button id="muteBtn" disabled class="voiceButton">Mute</button>
