--- a/Prototype/public/modUsers.css
+++ b/Prototype/public/modUsers.css
@@ -96,6 +96,13 @@ header {
     cursor: pointer;
 }
 
+.flagUser2{
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 20pt;
+    cursor: pointer;
+}
+
 .userName{
     display: flex;
     justify-content: space-evenly;
