--- a/Prototype/views/modUserPage.ejs
+++ b/Prototype/views/modUserPage.ejs
@@ -15,21 +15,21 @@
     </header>
     <div class="modPageContent">
         <div class="userName">
-            <h1> <%=user.fname%> <%=user.lname %></h1>
+            <h1 class="subHeader"> <%=user.fname%> <%=user.lname %></h1>
             <% if (user.flagged == 1){ %>
                 <form action="/unflagUser?userId=<%= user.userId %>" method="POST">
-                    <button class="flagUser">
+                    <button class="flagUser2">
                         Unflag</button>
                 </form>
             <% } else { %>
                 <form action="/modFlag?userId=<%= user.userId %>" method="POST">
-                    <button class="flagUser">
+                    <button class="flagUser2">
                         Flag</button>
                 </form>
             <% } %>
         </div>
         
-        <h1>Posts</h1>
+        <h1 class="subHeader">Posts</h1>
         <div class="flaggedUserList">
             <% if (!userPosts || userPosts.length===0) { %>
                 <div class="flaggedUser">
@@ -50,7 +50,7 @@
                 </table>
             <% } %>
         </div>
-        <h1>Replies</h1>
+        <h1 class="subHeader">Replies</h1>
         <div class="flaggedUserList">
             <% if (!userReplies || userReplies.length===0) { %>
                 <div class="flaggedUser">
