--- a/Prototype/public/home.css
+++ b/Prototype/public/home.css
@@ -30,6 +30,16 @@ a:link, a:visited {
     color: rgb(14, 14, 14);
 }
 
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.701);
+  z-index: 1040;
+}
+
 .subjects{
     list-style-type: none;
     padding: 0;
